--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "API para testes de entrevista",
   "main": "index.js",
   "scripts": {
-    "heroku-postbuild": "npm run start",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Luis Eduardo Altino",
   "license": "ISC",
   "dependencies": {
+    "http-json": "^1.2.2",
     "json-server": "^0.16.3"
   },
   "engines": {
